environments/gloo-gateway/gateway-api/live/rollouts-demo/strategies/rollouts-ui/rollouts-ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rollouts-ui
  namespace: rollouts-demo
spec:
  hostnames:
  - "rollouts-ui.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: argo-rollouts-dashboard
          port: 3100
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: rollouts-ui-route-policies
